<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>c1t_bringup</name>
  <version>0.0.0</version>
  <description>Bringup scripts and configurations for CARMA 1Tenth (C1T)</description>
  <maintainer email="carma@dot.gov">CARMA Support</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake_auto</depend>
  <depend>vesc</depend>
  <depend>twist_to_ackermann</depend>
  <depend>sllidar_ros2</depend>
  <depend>laser_filters</depend>
  <depend>navigation2</depend>
  <depend>nav2_route</depend>
  <depend>tf2_ros</depend>
  <depend>teleop_twist_joy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
