<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cda1tenth_bringup</name>
  <version>0.0.0</version>
  <description>Bringup scripts and configurations for CDA1tenth</description>
  <maintainer email="carma@dot.gov">CARMA Support</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake_auto</depend>
  <depend>twist_to_ackermann</depend>
  <depend>laser_filters</depend>
  <depend>navigation2</depend>
  <depend>nav2_route</depend>
  <depend>tf2_ros</depend>
  <depend>teleop_twist_joy</depend>
  <depend>dsrc_driver</depend>
  <depend>cpp_message</depend>
  <depend>nav2_port_drayage_demo</depend>
  <depend>nav2_route_server_behavior_tree</depend>
  <depend>nav2_emergency_stop</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>
